Added setup file geniration for electron app for windows * Added loging in electron program part

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Калькулятор для алмазная вышивки</title>
+    <title>Калькулятор для алмазной вышивки</title>
   </head>
   <body>
     <div id="app"></div>
