--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,5 @@
 //@import '~bootstrap/scss/bootstrap';
+$bg-img-logo: url('@assets/diamond.ico');
 
 .rotate-180-deg {
     transform: rotate(180deg);
@@ -7,4 +8,30 @@
 .dropdown-menu {
     max-height: 200px;
     overflow-y: auto;
+}
+
+.logo-img-30x30 {
+    height: 30px;
+    width: 30px;
+    background: $bg-img-logo center center;
+    background-size: 30px 30px;
+}
+
+.logo-img-25x25 {
+    height: 25px;
+    width: 25px;
+    background: $bg-img-logo center center;
+    background-size: 25px 25px;
+}
+
+.modal-backdrop {
+    margin-top: 40px;
+}
+
+.z-index-10 {
+    z-index: 10;
+}
+
+.z-index-20 {
+    z-index: 20;
 }
