picture edit form UI small changes

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -35,3 +35,7 @@ $bg-img-logo: url('@assets/diamond.ico');
 .z-index-20 {
     z-index: 20;
 }
+
+.accordion-button{
+    padding: 6px !important;
+}
