* Added functionality for time spent calculation * Fixed modal window displaying in modal window * Code refactoring

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -54,3 +54,8 @@ $bg-img-logo: url('@assets/diamond.ico');
         background-color: var(--bs-primary) !important;
     }
 }
+
+/* Для модальных окон в модальных окнах */
+.modal-backdrop {
+    z-index: 1055 !important;
+}
