--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -55,7 +55,7 @@ $bg-img-logo: url('@assets/diamond.ico');
     }
 }
 
-/* Для модальных окон в модальных окнах */
+/* for modal windows in modal windows */
 .modal-backdrop {
     z-index: 1055 !important;
 }
